monitoring/grafana-slack-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-slack-proxy
  labels:
    app: grafana-slack-proxy
