monitoring/grafana-slack-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-slack-proxy
  namespace: grafana-slack-proxy
spec:
  selector:
    app: grafana-slack-proxy
  ports:
  - port: 5001
    targetPort: 5001
