monitoring/grafana-slack-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-slack-proxy
  namespace: grafana-slack-proxy
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-slack-proxy.cloudless.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-slack-proxy
            port:
              number: 5001
